--- a/css/base.scss
+++ b/css/base.scss
@@ -9,7 +9,7 @@ body{
 	font-family: "Helvetica Neue","微软雅黑",sans-serif;
 	font-size: 15px;
 	width: 100%;
-	overflow-x: hidden;
+	//overflow-x: hidden;
 }
 img{
 	border:none;
