--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,6 @@ body {
   font-family: "Helvetica Neue","微软雅黑",sans-serif;
   font-size: 15px;
   width: 100%;
-  overflow-x: hidden;
 }
 
 img {
@@ -191,7 +190,7 @@ img {
   margin: auto;
   width: 100%;
   height: 44px;
-  background: rgba(0, 0, 0, 0.8);
+  background: #333333;
   z-index: 777777;
 }
 
@@ -401,9 +400,10 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  height: 100%;
+  height: 0;
   top: 0;
-  width: 668px;
+  width: 0;
+  overflow: hidden;
   transform: translateX(1050px);
   transition: transform 0.6s ease;
   z-index: 100000;
@@ -487,6 +487,9 @@ img {
 }
 
 .searchbox.searching {
+  width: 668px;
+  height: auto;
+  overflow: visible;
   transform: translateX(0);
 }
 
