--- a/css/main.scss
+++ b/css/main.scss
@@ -130,7 +130,9 @@
 		}
 	}
 	.bag.searching{
-		transform:translateX(100px);
+		width: 0;
+		height:0;
+		transform:translateX(50px);
 	}
 }
 @include ons{
